--- a/reto-piedrapapeltijera.html
+++ b/reto-piedrapapeltijera.html
@@ -6,6 +6,7 @@
             Piedra, papel o tijera
         </title>
         <script>
+            //hacer el juego con metodos
             function aleatorio(min, max){
                 return Math.floor(Math.random() * (max-min+1)  + min)
             }
@@ -22,17 +23,7 @@
                 }
                 return resultado
             }
-            // 1 es piedra, 2 es papel, 3 es tijera
-            let jugador = 0
-            let pc = 0
-            let triunfos = 0
-            let perdidas = 0
-            let empates = 0
-            while(triunfos < 3 && perdidas < 3){
-                pc = aleatorio(1,3)
-                jugador = prompt("Elije 1 para piedra, 2 para para papel, 3 para tijera")
-                alert("PC elige: "+ eleccion(pc))
-                alert("Tu eliges: " + eleccion(jugador))
+            function combate(pc, jugador){
                 //Combate
                 if( pc == jugador){
                     alert("EMPATE")
@@ -49,7 +40,20 @@
                 }else {
                     alert("PERDISTE")
                     perdidas = perdidas + 1
-                }    
+                }
+            }
+            // 1 es piedra, 2 es papel, 3 es tijera
+            let jugador = 0
+            let pc = 0
+            let triunfos = 0
+            let perdidas = 0
+            let empates = 0
+            while(triunfos < 3 && perdidas < 3){
+                pc = aleatorio(1,3)
+                jugador = prompt("Elije 1 para piedra, 2 para para papel, 3 para tijera")
+                alert("PC elige: "+ eleccion(pc))
+                alert("Tu eliges: " + eleccion(jugador))
+                combate(pc,jugador)                    
             }
             alert("Ganaste: " + triunfos +" veces" + "\n Perdiste: "+ perdidas + " veces" + "\n Empates: " + empates + " veces" )            
         </script>
