--- a/mokemon/mokepon.html
+++ b/mokemon/mokepon.html
@@ -6,8 +6,31 @@
     </head>
     <body>
         <h1>MOKEPON 🔥💧🌿</h1>
-        <P>
-            <button>Fuego 🔥</button>
-        </P>
+
+        <section id="seleccionar-mascota">
+            <h2>Elige a tu mascota:</h2>
+
+            MASCOTAS
+
+            <button>Seleccionar</button>
+        </section>
+
+        <section id="seleccionar-ataque">
+            <h2>Elige tu ataque:</h2>
+            <p>Tu mascota tiene <span>3</span> vidas</p>
+            <p>La mascota del enemigo tiene <span>3</span> vidas</p>
+            <P>
+                <button>Fuego 🔥</button>
+                <button>Agua 💧</button>
+                <button>Planta 🌿</button>
+            </P>
+        </section>
+        <section id="mensajes">
+            <p>tu mascota ataco con FUEGO, la mascota del enemigo atacó con TIERRA - GANASTE 🎊</p>
+        </section>
+
+        <section id="reiniciar">
+            <button>Reiniciar</button>
+        </section>
     </body>
 </html>
